# tf2_test_quicksign

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
jupyter-notebook-docker/: Dockerfile  pyproject.toml  requirements.txt
mlflow-docker/: Dockerfile
src/: train_predict_2.ipynb
