[tool.poetry]
name = "tf2-test-quicksign"
version = "0.1.0"
description = ""
authors = ["Jlhervy <jlhervy56@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.6.0"
pandas = "^1.0.1"
tensorflow="^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
